--- a/public/global.css
+++ b/public/global.css
@@ -1,63 +1,55 @@
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+:root {
+  --text: black;
+  --background: white;
+
+  /* Monospace font for game elements */
+  --game-font-family: "Courier New", "Courier", monospace, sans-serif;
+  --title-font-family: "Times New Roman", "Times", serif;
+  --body-font-family: "Helvetica", "Arial", sans-serif;
+
+  --border-radius: 4px;
+  --border-color: black;
+
+  --box-shadow: 0 4px 23px 0 rgba(0, 0, 0, 0.2);
+
+  --modal-background-z-index: 1000;
+  --modal-background-color: var(--background);
+  --modal-background-opacity: 0.8;
+  --modal-z-index: 1001;
+  --modal-background: var(--background);
+  --modal-padding: 2rem;
+  --modal-close-button-inset: calc(var(--modal-padding) / 2);
+
+  --letter-spacing: 0.5rem;
+  --letter-unknown: transparent;
+  --letter-unknown-text: black;
+  --letter-revealed-text: white;
+  --letter-correct-color: #6aaa64;
+  --letter-in-word-color: #c9b458;
+  --letter-not-in-word-color: #787c7e;
+
+  --reveal-duration: 750ms;
+  --reveal-stagger: calc(var(--reveal-duration) / 4);
+
+  --keyboard-key-background: #d3d6da;
+  --keyboard-max-width: 500px;
+  --keyboard-key-spacing: 0.25rem;
+  --keyboard-key-height: 3.625rem;
 }
 
 body {
-	color: #333;
-	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 
-a {
-	color: rgb(0,100,200);
-	text-decoration: none;
-}
+  background: var(--background);
+  margin: 0;
 
-a:hover {
-	text-decoration: underline;
-}
-
-a:visited {
-	color: rgb(0,80,160);
-}
-
-label {
-	display: block;
-}
-
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
-}
-
-input:disabled {
-	color: #ccc;
-}
-
-button {
-	color: #333;
-	background-color: #f4f4f4;
-	outline: none;
-}
-
-button:disabled {
-	color: #999;
-}
-
-button:not(:disabled):active {
-	background-color: #ddd;
-}
-
-button:focus {
-	border-color: #666;
+  font-family: var(--body-font-family);
 }
