Add share button

--- a/public/global.css
+++ b/public/global.css
@@ -1,4 +1,5 @@
 :root {
+  --primary: #6aaa64;
   --text: black;
   --background: white;
 
@@ -15,6 +16,11 @@
   --modal-z-index: 1000;
   --confetti-z-index: 2000;
 
+  --button-padding-y: 1rem;
+  --button-padding-x: 2rem;
+  --button-background: var(--primary);
+  --button-text: white;
+
   --modal-backdrop-opacity: 0.8;
   --modal-background: var(--background);
   --modal-margin: 2rem;
@@ -26,7 +32,7 @@
   --letter-unknown: transparent;
   --letter-unknown-text: black;
   --letter-revealed-text: white;
-  --letter-correct-color: #6aaa64;
+  --letter-correct-color: var(--primary);
   --letter-in-word-color: #c9b458;
   --letter-not-in-word-color: #787c7e;
 
@@ -34,6 +40,8 @@
   --reveal-stagger: calc(var(--reveal-duration) / 4);
 
   --keyboard-key-background: #d3d6da;
+  --keyboard-key-text: var(--text);
+  --keyboard-font-size: 1rem;
   --keyboard-max-width: 500px;
   --keyboard-key-spacing: 0.25rem;
   --keyboard-key-height: 3.625rem;
@@ -58,4 +66,18 @@ body {
 
 * {
   box-sizing: border-box;
+}
+
+button {
+  text-transform: uppercase;
+
+  padding: var(--button-padding-y) var(--button-padding-x);
+
+  outline: none;
+  box-shadow: none;
+  border-width: 0;
+  border-radius: var(--border-radius);
+  background-color: var(--button-background);
+  font-size: 1.5rem;
+  color: var(--button-text);
 }
